--- a/src/scss/vapor/vapor.scss
+++ b/src/scss/vapor/vapor.scss
@@ -26,6 +26,26 @@ $custom-colors: (
 // Merge the maps
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
+$blue-500: #135b80;
+$blue-400: #1E92CC;
+$blue-300: #40c4ff;
+$blue-200: #a6e3ff;
+$blue-100: #e8f6fd;
+$pink-500: #701980;
+$pink-400: #B11FCC;
+$pink-300: #DF3EFB;
+$pink-200: #EA7EFC;
+$pink-100: #F9ECFB;
+$grey-900: #141416;
+$grey-800: #373953;
+$grey-700: #666880;
+$grey-600: #8385A3;
+$grey-500: #9FA1BF;
+$grey-400: #C1C2D6;
+$grey-300: #DFE0EB;
+$grey-200: #F0F0F7;
+$grey-100: #FAFAFD;
+
 // Define the fonts:
 $font-family-sans-serif: "Genera Grotesk", "Inter", system-ui, helvetica, sans-serif;
 $font-family-monospace: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
@@ -89,6 +109,15 @@ nav {
         width: 22px;
         height: 22px;
     }
+}
+
+#vapor-navbar {
+    height: 80px;
+}
+
+#vapor-logo {
+    width: 130px;
+    height: 50px;
 }
 
 .icon-github-fill {
